src/background/background.css
.backgroundContainer {
	position: fixed;
	width: inherit;
	height: inherit;
	overflow-x: hidden;
	z-index: -1;
	background-image: radial-gradient(#D3E4FB, #C4DBFA, #98C0F6);
}

@-webkit-keyframes animateCloud {
    0% {
        margin-left: -700px;
    }
    100% {
        margin-left: 100%;
    }
}

@-moz-keyframes animateCloud {
    0% {
        margin-left: -700px;
    }
    100% {
        margin-left: 100%;
    }
}

@keyframes animateCloud {
    0% {
        margin-left: -700px;
    }
    100% {
        margin-left: 100%;
    }
}

.cloudContainer1 {
	margin-left: -100px;

	-webkit-animation: animateCloud 90s linear infinite;
	-moz-animation: animateCloud 90s linear infinite;
	animation: animateCloud 90s linear infinite;
	
	-webkit-transform: scale(0.65);
	-moz-transform: scale(0.65);
	transform: scale(0.65);
}

.cloudContainer2 {
	margin-left: 0px;

	-webkit-animation: animateCloud 100s linear infinite;
	-moz-animation: animateCloud 100s linear infinite;
	animation: animateCloud 100s linear infinite;
	
	-webkit-transform: scale(0.3);
	-moz-transform: scale(0.3);
	transform: scale(0.3);
}

.cloudContainer3 {
	margin-left: -2000px;

	-webkit-animation: animateCloud 100s linear infinite;
	-moz-animation: animateCloud 100s linear infinite;
	animation: animateCloud 100s linear infinite;
	
	-webkit-transform: scale(0.5);
	-moz-transform: scale(0.5);
	transform: scale(0.5);
}

.cloudContainer4 {
	margin-left: 1000px;
	margin-top: 5%;

	-webkit-animation: animateCloud 70s linear infinite;
	-moz-animation: animateCloud 70s linear infinite;
	animation: animateCloud 70s linear infinite;
	
	-webkit-transform: scale(0.4);
	-moz-transform: scale(0.4);
  	transform: scale(0.4);
}

.cloudContainer5 {
	margin-top: 10%;

	-webkit-animation: animateCloud 40s linear infinite;
	-moz-animation: animateCloud 40s linear infinite;
	animation: animateCloud 40s linear infinite;
	
	-webkit-transform: scale(0.55);
	-moz-transform: scale(0.55);
 	transform: scale(0.55);
}

.cloud {
  	background: #E1EDFC;
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
	
	-webkit-border-radius: 100px;
	-moz-border-radius: 100px;
	border-radius: 100px;
	
	-webkit-box-shadow: 0 8px 0px #E1EDFC;
	-moz-box-shadow: 0 8px 0px #E1EDFC;
	box-shadow: 0 8px 0px #E1EDFC;

	position: relative;
	height: 120px;
	width: 350px;
	z-index: -10;
}

.cloud:after, .cloud:before {
	position: absolute;
	z-index: -10;
  	background: #E1EDFC;
	content: '';
}

.cloud:after {
	-webkit-border-radius: 100px;
	-moz-border-radius: 100px;
	border-radius: 100px;

	width: 100px;
	height: 100px;
	left: 50px;
	top: -50px;
}

.cloud:before {
	-webkit-border-radius: 200px;
	-moz-border-radius: 200px;
	border-radius: 200px;

	width: 180px;
	height: 180px;
	right: 50px;
  	top: -90px;
}

